--- a/public/assests/site/css/style.css
+++ b/public/assests/site/css/style.css
@@ -146,6 +146,9 @@ a.active,a:hover{
     .checkbtn{
         display: block;
     }
+    #check{
+        display: none;
+    }
     ul{
         position: fixed;
         z-index: 999;
