--- a/public/assests/site/css/style2.css
+++ b/public/assests/site/css/style2.css
@@ -5329,7 +5329,7 @@ a.button.preview i { margin-left: 5px; }
 ------------------------------------- */
 #contact textarea {
 	min-height: 200px;
-	margin: 15px 0 25px 0;
+	margin: 15px 0 25px 28px;
 }
 
 #contact input {
